Add ability to search place and add

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
 
     <!-- Additional -->
-    <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css">
-    <script src="https://unpkg.com/vuetify/dist/vuetify.min.js"></script>
+    <!--<link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css">-->
+    <!--<script src="https://unpkg.com/vuetify/dist/vuetify.min.js"></script>-->
   </head>
   <body>
     <div id="app">Loading...</div>
